force-app/main/default/objects/Agent_Interaction__c/Agent_Interaction__c.object-meta.xml
<CustomObject>
    <description>Tracks agent or self-service interactions related to reservations</description>
    <label>Agent Interaction</label>
    <nameField>
        <displayFormat>AGI-{000000}</displayFormat>
        <label>Agent Interaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent Interactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>