force-app/main/default/objects/Agent_Interaction__c/fields/Conversation_ID__c.field-meta.xml
<CustomField>
    <fullName>Conversation_ID__c</fullName>
    <description>External conversation/session identifier</description>
    <externalId>true</externalId>
    <label>Conversation ID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>