force-app/main/default/objects/Agent_Interaction__c/fields/End_DateTime__c.field-meta.xml
<CustomField>
    <fullName>End_DateTime__c</fullName>
    <description>End time of the interaction</description>
    <label>End Date/Time</label>
    <type>DateTime</type>
</CustomField>