force-app/main/default/objects/Agent_Interaction__c/fields/Reservation__c.field-meta.xml
<CustomField>
    <fullName>Reservation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associated Reservation</description>
    <label>Reservation</label>
    <referenceTo>Reservation__c</referenceTo>
    <relationshipLabel>Agent Interactions</relationshipLabel>
    <relationshipName>Agent_Interactions</relationshipName>
    <type>Lookup</type>
</CustomField>