force-app/main/default/objects/Agent_Interaction__c/fields/Resolution_Type__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Type__c</fullName>
    <description>Outcome of the interaction</description>
    <label>Resolution Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self-Service</fullName>
            </value>
            <value>
                <fullName>Escalated</fullName>
            </value>
            <value>
                <fullName>Abandoned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>