force-app/main/default/objects/Agent_Interaction__c/fields/Sentiment_Score__c.field-meta.xml
<CustomField>
    <fullName>Sentiment_Score__c</fullName>
    <description>Sentiment score associated with interaction</description>
    <label>Sentiment Score</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>