force-app/main/default/objects/Agent_Interaction__c/fields/Start_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Start_DateTime__c</fullName>
    <description>Start time of the interaction</description>
    <label>Start Date/Time</label>
    <type>DateTime</type>
</CustomField>