force-app/main/default/objects/Agent_Interaction__c/fields/Topics_Discussed__c.field-meta.xml
<CustomField>
    <fullName>Topics_Discussed__c</fullName>
    <description>Topics that were discussed</description>
    <label>Topics Discussed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Booking</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Policy</fullName>
            </value>
            <value>
                <fullName>Seating</fullName>
            </value>
            <value>
                <fullName>Accessibility</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>