force-app/main/default/objects/Agent_Interaction__c/fields/Transcript__c.field-meta.xml
<CustomField>
    <fullName>Transcript__c</fullName>
    <description>Transcript of the interaction</description>
    <label>Transcript</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>